--- a/index.html
+++ b/index.html
@@ -67,27 +67,15 @@
                     <p>Сделать заказ</p>
                     <button>
                         <a href="tel:+79872765474">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25"
-                                fill="none">
-                                <path
-                                    d="M7.64808 17.3524C17.5318 27.236 20.5434 25.0732 21.8912 24.1053C21.9139 24.089 21.9361 24.0731 21.9578 24.0576C22.1704 23.9369 27.0382 20.8002 24.0108 17.7735C20.4519 14.2142 19.0628 14.804 17.6927 15.3857C16.3597 15.9516 15.0446 16.51 11.7665 13.2325C8.4891 9.95434 9.04774 8.63947 9.61398 7.30672C10.196 5.93689 10.786 4.54815 7.22705 0.989273C4.19936 -2.03837 1.06238 2.8298 0.943063 3.04101C0.927759 3.06241 0.912067 3.08424 0.896048 3.10652C-0.0726599 4.45401 -2.23818 7.46629 7.64808 17.3524Z"
-                                    fill="url(#paint0_linear_57_48)" />
-                                <path
-                                    d="M7.64808 17.3524C17.5318 27.236 20.5434 25.0732 21.8912 24.1053C21.9139 24.089 21.9361 24.0731 21.9578 24.0576C22.1704 23.9369 27.0382 20.8002 24.0108 17.7735C20.4519 14.2142 19.0628 14.804 17.6927 15.3857C16.3597 15.9516 15.0446 16.51 11.7665 13.2325C8.4891 9.95434 9.04774 8.63947 9.61398 7.30672C10.196 5.93689 10.786 4.54815 7.22705 0.989273C4.19936 -2.03837 1.06238 2.8298 0.943063 3.04101C0.927759 3.06241 0.912067 3.08424 0.896048 3.10652C-0.0726599 4.45401 -2.23818 7.46629 7.64808 17.3524Z"
-                                    stroke="url(#paint1_linear_57_48)" />
+                            <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25" fill="none">
+                                <path d="M7.64808 17.3524C17.6978 27.402 20.6426 24.9971 21.9578 24.0576C22.1704 23.9369 27.0382 20.8002 24.0108 17.7735C16.9893 10.7514 18.414 19.8787 11.7665 13.2325C5.1205 6.58492 14.2486 8.01069 7.22705 0.989273C4.19936 -2.03837 1.06238 2.8298 0.943064 3.04101C0.00225554 4.35627 -2.40167 7.30281 7.64808 17.3524Z" fill="url(#paint0_linear_57_48)"/>
                                 <defs>
-                                    <linearGradient id="paint0_linear_57_48" x1="3.84615" y1="-30.2885" x2="37.9808"
-                                        y2="33.6538" gradientUnits="userSpaceOnUse">
-                                        <stop stop-color="white" />
-                                        <stop offset="1" />
-                                    </linearGradient>
-                                    <linearGradient id="paint1_linear_57_48" x1="6.38891" y1="-42.2223" x2="44.1667"
-                                        y2="41.389" gradientUnits="userSpaceOnUse">
-                                        <stop stop-color="white" />
-                                        <stop offset="1" />
-                                    </linearGradient>
+                                  <linearGradient id="paint0_linear_57_48" x1="-4.79817e-08" y1="1.5" x2="22" y2="25" gradientUnits="userSpaceOnUse">
+                                    <stop stop-color="#919191"/>
+                                    <stop offset="1"/>
+                                  </linearGradient>
                                 </defs>
-                            </svg>
+                              </svg>
                         </a>
                     </button>
                 </div>
