--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
                 <div class="main-content-info">
                     <div class="main-content-info-text">
                         <h1>Ирбис Мониторинг</h1>
-                        <p>Компания ООО «Ирбис Мониторинг» производит продажу,
+                        <h2>Компания ООО «Ирбис Мониторинг» производит продажу,
                             монтаж и обслуживание навигационного оборудования в Республике Татарстан.
                             У нас вы сможете комплексно оборудовать свою технику всем необходимым экономя
-                            свое время и деньги. </p>
+                            свое время и деньги. </h2>
                     </div>
                     <button class="main-content-info-button">Смотреть каталог</button>
                 </div>
@@ -92,20 +92,20 @@
 
             <div class="preim-blocks">
 
-                <div class="preim-block">
+                <div class="preim-block anim-items aNNHide">
                     <img src="img/preim-block-img1.png" alt="1" class="preim-block-img1">
                     <p>Выезжаем на территорию заказчика по Республике Татарстан. Срок выезда не более 3х рабочих дней с
                         момента подачи заявки.</p>
                 </div>
-                <div class="preim-block">
+                <div class="preim-block anim-items right-anim aNNHide">
                     <img src="img/preim-block-img2.png" alt="2" class="preim-block-img2">
                     <p>Наши специалисты
                         работают 7 дней
                         в неделю.</p>
 
                 </div>
-                <div class="preim-block">
-                    <img src="img/preim-block-img3.png" alt="3" class="preim-block-img1">
+                <div class="preim-block anim-items aNNHide">
+                    <img src="img/preim-block-img3.png" alt="3" class="preim-block-img1 jWIDii_2">
                     <p>Расширенная гарантия
                         на 5 лет</p>
                 </div>
